# labforge-api

./: .env.example  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20241125_0001_initial.py  20241128_0001_add_enrollment_unique_constraint.py
app/: __init__.py  main.py  models.py
app/api/: __init__.py
app/api/routes/: __init__.py  courses.py
app/core/: config.py
app/db/: __init__.py  init.py  models.py  session.py
app/schemas/: __init__.py  common.py  courses.py  enrollments.py  health.py  labs.py
tests/: README.md  __init__.py  conftest.py
tests/integration/: test_course_errors.py  test_courses.py  test_get_course.py  test_health.py  test_list_courses.py  test_update_course.py
tests/unit/: test_course_validation.py  test_enrollment_schemas.py  test_lab_schemas.py
